feat: Use messages.lang like existing plugin does. Fix up a few small things

--- a/server/src/main/resources/plugin.yml
+++ b/server/src/main/resources/plugin.yml
@@ -26,6 +26,8 @@ permissions:
     default: op
   comp.admin.tallyvotes:
     default: op
+  comp.admin.backup:
+    default: op
 
 commands:
   compadmin:
