--- a/server/src/main/resources/plugin.yml
+++ b/server/src/main/resources/plugin.yml
@@ -28,6 +28,10 @@ permissions:
     default: op
   comp.admin.backup:
     default: op
+  comp.admin.reset:
+    default: op
+  comp.reset.bypass:
+    default: op
 
 commands:
   compadmin:
